# fasthooks

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/app/: index.html
api/contrib-claude/: index.html
api/depends/: index.html
api/events/: index.html
api/responses/: index.html
api/tasks/: index.html
api/testing/: index.html
api/transcript/: index.html
architecture/: index.html
cli/: index.html
comparison/: index.html
comparison/cchooks/: index.html
comparison/claude-agent-sdk/: index.html
comparison/claude-mem/: index.html
comparison/continuous-claude/: index.html
docs/: architecture.md  index.md  reference.md
docs/api/: depends.md  index.md  responses.md  tasks.md  testing.md
docs/comparison/: index.md
docs/strategies/: index.md  long-running.md
docs/tutorial/: background-tasks.md  dependencies.md  index.md
getting-started/: index.html
reference/: index.html
search/: search_index.json
specs/: strategies.md  transcript_modeling.md
src/cchooks/: __init__.py  __main__.py  app.py  cli.py
src/fasthooks/: app.py  blueprint.py  cli.py  logging.py
tests/: test_app.py  test_blueprint.py  test_cli.py  test_di.py  test_events_base.py  test_events_lifecycle.py  test_events_tools.py  test_guards.py  test_io.py  test_logging.py  test_middleware.py  test_responses.py  test_state.py  test_tasks.py  test_testing_utils.py  test_transcript.py  test_transcript_model.py
tutorial/: index.html
tutorial/background-tasks/: index.html
tutorial/blueprints/: index.html
(+30 files in other folders)
