[project]
name = "cchooks"
version = "0.1.0"
description = "Delightful Claude Code hooks - FastAPI-like DX for building hooks"
readme = "README.md"
authors = [
    { name = "Mehmet Oner Yalcin", email = "oneryalcin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
cchooks = "cchooks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=cchooks --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.coverage.run]
source = ["src/cchooks"]
branch = true
